# project_module_2

./: .env.sample  .gitignore  README.md  docker-compose.yml  requirements.txt  test_cfg.py
init-sql/: 1-init.sql  2-create-tables.sql  3-create-indexes.sql
services/: app.py
services/backend/: Dockerfile  pyproject.toml
services/backend/exceptions/: api_errors.py
services/backend/settings/: config.py  logging_config.py
services/backend/src/: app.py
services/backend/src/db/: dependencies.py
services/backend/src/exceptions/: api_errors.py
services/backend/src/handlers/: dependencies.py  files.py  upload.py
services/backend/src/settings/: config.py  logging_config.py
services/frontend/: index.html  script.js  styles.css  upload.html
services/frontend/css/: styles.css  upload.css
services/frontend/js/: random-hero.js  tabs.js  upload.js
services/nginx/: nginx.conf
services/pgbouncer/commands/: requirements.txt
